<resources>
    <string name="app_name">ContactsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter name</string>
    <string name="number_string">00000 00000</string>
    <string name="delete">Delete</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="name">Name :</string>
    <string name="number">Number :</string>
</resources>